--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ index: 1
     <div class="wrapper">
         <div class="jumbotron jumbotron-banner">
             <h2><i>{{ site.slogan }}</i></h2>
+            <div class="jumbotron-inner text-justify">{{ site.presentation | markdownify }} </div>
         </div>
     </div>
 </div>
@@ -17,7 +18,6 @@ index: 1
             {% assign services_pages = site.pages | where:'type','services' | sorted:'index' %}
             {% for services_page in services_pages %}
             <h1><span class="glyphicon {{services_page.icon}}"></span> {{services_page.title}} </h1>
-
             <ul class="list-group">
                 {% for post in site.posts offset: 0 %}
                 {% if post.categories contains services_page.ref %}
