--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ index: 1
         </div>
     </div>
 </div>
-<div class="wrapper">
+<div class="wrapper wrapper-content">
     <div class="row">
         <div class="col-md-8 col-sm-8 col-xs-12">
             {% assign services_pages = site.pages | where:'type','services' | sorted:'index' %}
