--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@ index: 1
                 <div class="row">
                     {% for post in site.posts %}
                     {% if post.categories contains 'references' %}
-                    <div class="col-xs-6 col-sm-4 col-md-3">
-                        <a href="{{ post.url }}"><img class="img-responsive img-rounded" src="{{ post.thumb }}" alt="{{ post.alt }}"></a>
+                    <div class="col-xs-6 col-sm-3 col-md-3">
+                        <a href="{{ post.url }}"><img class="img-responsive" src="{{ post.thumb }}" alt="{{ post.alt }}"></a>
                     </div>
                     {% endif %}
                     {% endfor %}
