custom image background for each page

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@ title: Contact
 place: right
 menu: main
 index: 6
+img: wood-3092039_1920.jpg
 ---
 
 <div class="row justify-content-center text-justify mt-2">
