optimized background images

--- a/technologies.html
+++ b/technologies.html
@@ -7,5 +7,5 @@ place: dropdown
 permalink: /technologies/
 index: 3
 icon: glyphicon glyphicon-phone
-img: maps_screen.png
+img: maps_screen.jpg
 ---
