--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ index: 1
         {% assign cols = "technologies,etudes,logistique" | split: "," %}
         {% for col in cols %}
         <div class="p-1">
-            <div id="carousel{{col}}" class="carousel slide w-100 max-vh-25 " data-ride="carousel" data-interval="false">
+            <div id="carousel{{col}}" class="carousel slide w-100 max-vh-25 min-h-190px" data-ride="carousel" data-interval="false">
                 <ol class="carousel-indicators">
                     {% for item in site.[col] %}
                     <li data-target="#carousel{{col}}" data-slide-to="{{forloop.index0}}" {%if forloop.first%} class="active"{%endif%}></li>
@@ -19,11 +19,13 @@ index: 1
                 </ol>
                 <div class="carousel-inner">
                     {% for item in site.[col] %}
-                    <div class="carousel-item max-vh-25{%if forloop.first%} active{%endif%}">
+                    <div class="carousel-item max-vh-25 min-h-190px {%if forloop.first%} active{%endif%}">
                         <img src="{{item.thumb}}" class="d-block w-100" alt="Card image">
                         <div class="carousel-caption text-light bg-dark-50 white-shadow ">
-                            <h5>{{col | capitalize}}</h5>
-                            <p>{{item.title}}</p>
+                            <a href="{{item.url}}" class='text-light'>
+                                <h5>{{col | capitalize}}</h5>
+                                <p>{{item.title}}</p>
+                            </a>
                         </div>
                     </div>                    
                     {% endfor %}
