--- a/metiers.html
+++ b/metiers.html
@@ -8,8 +8,8 @@ innav: true
 index: 1
 img: banner_1.jpg
 presentation: |
-  Xylolink apporte son expertise dans l'innovation logistique et technologique au service de l'approvisionnement en bois.
-
+  Xylolink a été créée en décembre 2013 par Adrien Arraiolos, ingénieur agronome, ayant plus de 10 ans d’expérience dans l’optimisation de l’approvisionnement en bois rond et l’innovation technologique.
+  
   Notre savoir-faire repose sur une expérience de 15 ans dans l'optimisation des processus logistiques et l'intégration technologique 
   acquise auprès des entreprises de l'approvisionnement en bois rond.
   
@@ -18,30 +18,24 @@ presentation: |
   * Une intégration à un réseau académique international,
   * La production d'outils innovants utilisant sur les dernières technologies du développement logiciel. 
 
+
   ### Nos métiers
-  * Conseil en optimisation des processus logistiques industriels
-  * Conception et édition d'applications facilitant l'optimisation de l'approvisionnement en bois rond
-  * Etudes de filière sur les thématiquement impactant l'approvisionnement en bois rond
+
+  * [Conseil en optimisation des processus logistiques industriels](/logistique)
+  * [Conception et édition d'applications facilitant l'optimisation de l'approvisionnement en bois rond](/technologies)
+  * [Etudes de filière sur les thématiquement impactant l'approvisionnement en bois rond](/etudes)
 
   ### Nos méthodes
+
   * Analyse des faiblesses des réseaux logistiques par une démarche participative en entreprise,
   * Recherche des solutions les plus adaptées par une démarche d'accompagnement à l'innovation impliquant directement les collaborateurs de l'entreprise
   * Développement de solutions informatiques dédiées aux activités de la filière forêt-bois (gestion de stocks, cadencement des livraisons, analyse financière, reporting...)
   * Réalisation d'études à l'échelle de la filière (schéma de desserte, diagnostic logistique...)
 
-  ### Nos applications
-
-  Xylolink met à la disposition de ses clients sa suite applicative permettant la gestion de l'approvisionnement en bois rond du chantier au parc à bois.
+  ### Nos applications 
+  Xylolink met à la disposition de ses clients sa suite applicative [XyloSuite](/technologies/xylosuite) permettant la gestion de l'approvisionnement en bois rond du chantier au parc à bois.
 
   Gestion du chantier, planification roulante des activités futures, transmission aux opérateurs, éditions des documents légaux, remontée des stocks en temps réel, prévision et contrôle des stocks en flux continu, suivi des commandes...
-
-  Toutes ces applis communiquent entre elles en s'appuyant sur un système central de collecte des données, accessible par internet et dédié à l'entreprise cliente (chaque client possède sa propre base de données).
-
-  Par ailleurs, ces applications fonctionnent même sans accès à internet : il suffit d'avoir récupéré ses données avant d'arriver en zone blanche pour pouvoir les utiliser. Dès que le réseau est à nouveau accessible, les applis procèdent automatiquement aux sauvegardes des informations collectées sur le terrain.
-
-  N'hésitez pas à nous contacter pour plus d'informations.
-
-  Xylolink construit une démarche d’accompagnement à la mise en oeuvre des innovations retenues, dépendant directement du niveau d’autonomie de l’entreprise. Afin que l’entreprise garde la maîtrise du processus d’innovation, Xylolink favorise la montée en compétence des acteurs par leur formation et leur implication directe à toutes les étapes.
 
   Xylolink est à la pointe de l'innovation de part son intégration à un large réseau académique en France et à l'international.
 
@@ -51,6 +45,6 @@ presentation: |
    nos confrères (Forêt Logistique conseil, Cabinet Coudert)
 ---
 
-<div class="row p-4">
+<div class="p-4">
     {{ page.presentation | markdownify }}
 </div>
