--- a/metiers.html
+++ b/metiers.html
@@ -8,15 +8,14 @@ innav: true
 index: 1
 img: banner_1.jpg
 presentation: |
-  Xylolink a été créée en décembre 2013 par Adrien Arraiolos, ingénieur agronome, ayant plus de 10 ans d’expérience dans l’optimisation de l’approvisionnement en bois rond et l’innovation technologique.
+  Xylolink a été créée en décembre 2013 par **Adrien Arraiolos, ingénieur agronome**, ayant plus de 10 ans d’expérience dans l’optimisation de l’approvisionnement en bois rond et l’innovation technologique.
   
-  Notre savoir-faire repose sur une expérience de 15 ans dans l'optimisation des processus logistiques et l'intégration technologique 
-  acquise auprès des entreprises de l'approvisionnement en bois rond.
+  Notre savoir-faire repose sur **une expérience acquise auprès des entreprises de l'approvisionnement en bois rond**.
   
   Cette expertise se fonde sur 3 socles :
-  * La maîtrise du fonctionnement des entreprises de la filière et de leurs besoins,
-  * Une intégration à un réseau académique international,
-  * La production d'outils innovants utilisant sur les dernières technologies du développement logiciel. 
+  * La **maîtrise du fonctionnement des entreprises** de la filière et de leurs besoins,
+  * Une intégration à un **réseau académique international**,
+  * La production d'outils innovants utilisant sur **les dernières technologies du développement logiciel**. 
 
 
   ### Nos métiers
@@ -27,21 +26,29 @@ presentation: |
 
   ### Nos méthodes
 
-  * Analyse des faiblesses des réseaux logistiques par une démarche participative en entreprise,
-  * Recherche des solutions les plus adaptées par une démarche d'accompagnement à l'innovation impliquant directement les collaborateurs de l'entreprise
-  * Développement de solutions informatiques dédiées aux activités de la filière forêt-bois (gestion de stocks, cadencement des livraisons, analyse financière, reporting...)
-  * Réalisation d'études à l'échelle de la filière (schéma de desserte, diagnostic logistique...)
+  * Analyse des forces et faiblesses des réseaux logistiques par **une démarche participative en entreprise**,
+  * Recherche des solutions les plus adaptées par une démarche d'**accompagnement à l'innovation impliquant directement les collaborateurs** de l'entreprise
+  * Développement de **solutions informatiques dédiées aux activités de la filière forêt-bois** (gestion de stocks, cadencement des livraisons, analyse financière, reporting...)
+  * Réalisation d'**études à l'échelle de la filière** (schéma de desserte, diagnostic logistique...)
 
   ### Nos applications 
-  Xylolink met à la disposition de ses clients sa suite applicative [XyloSuite](/technologies/xylosuite) permettant la gestion de l'approvisionnement en bois rond du chantier au parc à bois.
 
-  Gestion du chantier, planification roulante des activités futures, transmission aux opérateurs, éditions des documents légaux, remontée des stocks en temps réel, prévision et contrôle des stocks en flux continu, suivi des commandes...
+  **Xylolink met à la disposition de ses clients sa suite applicative [XyloSuite](/xylosuite/intro) permettant la gestion de l'approvisionnement en bois rond du chantier au parc à bois :** 
 
-  Xylolink est à la pointe de l'innovation de part son intégration à un large réseau académique en France et à l'international.
+  ##### Gestion des chantiers d'exploitation forestière, 
+  ##### planification roulante des achats de bois sur pied, de l'exploitation forestière et du transport de bois, 
+  ##### transmission aux opérateurs, 
+  ##### éditions des documents légaux,
+  ##### suivi des stocks de bois en temps réel, 
+  ##### prévision et contrôle des stocks en flux continu, 
+  ##### suivi des commandes...
 
-  Nos références : KEDGE Business School, Ecole Supérieure du Bois, ENSTIB, INRA Nancy, Laboratoire FORAC (Université Laval à Québec), Université de Bordeaux.
 
-  Nos clients et partenaires : Les entreprises de l'approvisionnement en bois rond, les institutionnels (ORT du Grand Est, Communautés de communes MACS et Grand DAX),
+  Xylolink est à la pointe de l'innovation de part son intégration à un **large réseau académique en France et à l'international**.
+
+  **Nos références** : KEDGE Business School, Ecole Supérieure du Bois, ENSTIB, INRA Nancy, Laboratoire FORAC (Université Laval à Québec), Université de Bordeaux.
+
+  **Nos clients et partenaires** : Les entreprises de l'approvisionnement en bois rond, les institutionnels (ORT du Grand Est, Communautés de communes MACS et Grand DAX),
    nos confrères (Forêt Logistique conseil, Cabinet Coudert)
 ---
 
