--- a/etudes.html
+++ b/etudes.html
@@ -1,6 +1,7 @@
 ---
 layout: collection
 title: Etudes
+subtitle: Xylolink | Etudes pour la filière forêt - bois
 collection: etudes
 place: dropdown
 type: services
