--- a/logistique.html
+++ b/logistique.html
@@ -1,6 +1,7 @@
 ---
 layout: collection
 title: Logistique
+subtitle: Conseil en logistique forêt - bois
 collection: logistique
 place: dropdown
 type: services
