--- a/metiers.html
+++ b/metiers.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Nos métiers
+subtitle: Xylolink | Nos métiers - conseil et technologies
 collection: metiers
 place: right
 permalink: /metiers/
