--- a/technologies.html
+++ b/technologies.html
@@ -1,6 +1,7 @@
 ---
 layout: collection
 title: Technologies
+subtitle: Xylolink | Technologies pour l'approvisionnement en bois rond
 collection: technologies
 type: services
 place: dropdown
