--- a/xylosuite.html
+++ b/xylosuite.html
@@ -1,6 +1,7 @@
 ---
 layout: collection
 title: XyloSuite
+subtitle: XyloSuite, logiciels d'exploitation forestière et d'approvisionnement en bois
 collection: xylosuite
 type: services
 place: xylosuite
