--- a/references.html
+++ b/references.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Références
+subtitle: Xylolink | Nos références
 collection: references
 place: right
 permalink: /references/
