update private data section

--- a/mentions.html
+++ b/mentions.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: mentions
+title: Mentions
 subtitle: Xylolink | Mentions légales
 place: none
 menu: main
@@ -38,6 +38,13 @@ img: wood-3092039_1920.jpg
       style="border: 0; height: 200px; width: 600px;"
       src="https://stats.cloud.romsys.ovh/index.php?module=CoreAdminHome&action=optOut&language=fr&backgroundColor=&fontColor=&fontSize=1rem&fontFamily=Roboto"
       ></iframe>
+
+    <div>
+      <p>Les seules données collectées le sont à des fins d'optimisation du site web. 
+        Elles ne sont ni commercialisées, ni diffusée à aucun tiers.</p>
+      <p>Nous utilisons la solution libre Matomo afin de mesurer l'audience du site.</p>
+    </div>
+
   </div>
 </div>
 
