--- a/metiers.html
+++ b/metiers.html
@@ -23,7 +23,7 @@ presentation: |
 
   * [Conseil en optimisation des processus logistiques industriels](/logistique)
   * [Conception et édition d'applications facilitant l'optimisation de l'approvisionnement en bois rond](/technologies)
-  * [Etudes de filière sur les thématique impactant l'approvisionnement en bois rond](/etudes)
+  * [Etudes de filière sur les thématiques impactant l'approvisionnement en bois rond](/etudes)
 
   ### Nos méthodes
 
